# backend/config/openapi.yml
@@ -46,6 +46,34 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /user/start-password-recovery:
+    post:
+      tags:
+        - root
+      summary: Password recovery
+      description: intiate password recovery by email
+      operationId: startPasswordRecovery
+      requestBody: 
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+
+      responses:
+        '200':
+          description: success
+          content:
+        '400':
+          description: validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 servers:
   - url: /api/v1
 components:
